--- a/index.html
+++ b/index.html
@@ -1,13 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="wf-alegreyasans-n4-active wf-roboto n4-active wf-opensans-n4-active wf-ubuntu-n4-active wf-sansserif-n4-inactive wf-active>
+">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test</title>
+    <!--viewport for responsive design-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <meta name="author" content="Kimberly Uresti">
+    <meta name="description" content="Assignment portal for Kimberly Uresti WDD230: Web Frontend Development Brigham Young University-Idaho">
+    <title>kuresti WDD230 Home Page</title>
+    
 </head>
 <body>
-    <h1>Test</h1>
-    <p>Hello World!</p>
+    <header>
+        <!--ID photo Kimberly Uresti-->
+        <img src="images/kimpicwdd230.jpg" alt="Photo of Kimberly Uresti">
+        <!--Main Heading-->
+        <h1>Kimberly Uresti</h1>
+    </header>
+    <main>
+        <h2>WDD 230: Lesson Portal</h2>
+        <ul>
+            <li>
+                Lesson 2:
+                <a href="http://"></a>
+            </li>
+            <li>
+                Lesson 3:
+                <a href="http://"></a>
+            </li>
+            <li>
+                Lesson 4:
+                <a href="http://"></a>
+            </li>
+            <li>
+                Lesson 5:
+                <a href="http://"></a>
+            </li>
+            <li>
+                Lesson 6:
+                <a href="http://"></a>
+            </li>
+            <li>
+                Lesson 7:
+                <a href="http://"></a>
+            </li>
+            <li>
+                Lesson 8:
+                <a href="http://"></a>
+            </li>
+            <li>
+                Lesson 9:
+                <a href="http://"></a>
+            </li>
+            <li>
+                Lesson 10:
+                <a href="http://"></a>
+            </li>
+            <li>
+                Lesson 11:
+                <a href="http://"></a>
+            </li>
+        </ul>
+    </main>
+    <footer>
+        &copy; 2022| Kimberly Uresti | Arizona |
+        <a href="https://www.byui.edu/online">BYUI Online Learning</a> 
+        | Today's date: <span id="currentdate"></span>        <br>
+
+    </footer>
+    <script>
+        // toLocaleDateString
+        const options = {weekday: 'long', day: 'numeric', month: 'long', year:'numberic'};
+        document.getElementById('currentdate').textContent = new Date().toLocaleDateString('en-US', options);
+    </script>
 </body>
 </html>
