Lesson Portal div Wrapper

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     
 </head>
 <body>
+    <div id="content">
     <header>
         <div class="header-box">
         <!--ID photo Kimberly Uresti-->
@@ -82,6 +83,7 @@
         <script src="scripts/lastmodified.js"></script>
 
     </footer>
+    </div>
     <script src="scripts/date.js"></script>
     
 </body>
