--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </ul>
     </main>
     <footer>
-        &copy; 2022| Kimberly Uresti | Arizona |
+        <p>&copy; 2022| Kimberly Uresti | Arizona |</p>
         <a href="https://www.byui.edu/online">BYUI Online Learning</a> 
         | Today's date: <span id="currentdate"></span>
         <br>
