--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!--Main Heading-->        
         </div>
         <div class="header-box-name">
-            <h1 class=>Kimberly Uresti</h1>
+            <h1>h1> class=>Kimberly Uresti</h1>
         </div>
     
     </header>
@@ -34,43 +34,43 @@
         <ul>
             <li>
                 Lesson 2:
-                <a href="http://"></a>
+                <a href="#"></a>
             </li>
             <li>
                 Lesson 3:
-                <a href="http://"></a>
+                <a href="#"></a>
             </li>
             <li>
                 Lesson 4:
-                <a href="http://"></a>
+                <a href="#"></a>
             </li>
             <li>
                 Lesson 5:
-                <a href="http://"></a>
+                <a href="#"></a>
             </li>
             <li>
                 Lesson 6:
-                <a href="http://"></a>
+                <a href="#"></a>
             </li>
             <li>
                 Lesson 7:
-                <a href="http://"></a>
+                <a href="#"></a>
             </li>
             <li>
                 Lesson 8:
-                <a href="http://"></a>
+                <a href="#"></a>
             </li>
             <li>
                 Lesson 9:
-                <a href="http://"></a>
+                <a href="#"></a>
             </li>
             <li>
                 Lesson 10:
-                <a href="http://"></a>
+                <a href="#"></a>
             </li>
             <li>
                 Lesson 11:
-                <a href="http://"></a>
+                <a href="#"></a>
             </li>
         </ul>
     </main>
