--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!--Main Heading-->        
         </div>
         <div class="header-box-name">
-            <h1>h1> class=>Kimberly Uresti</h1>
+            <h1>Kimberly Uresti</h1>
         </div>
     
     </header>
