Lesson Portal reference links

--- a/index.html
+++ b/index.html
@@ -34,43 +34,43 @@
         <ul>
             <li>
                 Lesson 2:
-                <a href="#"></a>
+                <a href="lesson-2.html"></a>
             </li>
             <li>
                 Lesson 3:
-                <a href="#"></a>
+                <a href="lesson-3.html"></a>
             </li>
             <li>
                 Lesson 4:
-                <a href="#"></a>
+                <a href="lesson-4.html"></a>
             </li>
             <li>
                 Lesson 5:
-                <a href="#"></a>
+                <a href="lesson-5.html"></a>
             </li>
             <li>
                 Lesson 6:
-                <a href="#"></a>
+                <a href="lesson-6.html"></a>
             </li>
             <li>
                 Lesson 7:
-                <a href="#"></a>
+                <a href="lesson-7.html"></a>
             </li>
             <li>
                 Lesson 8:
-                <a href="#"></a>
+                <a href="lesson-8.html"></a>
             </li>
             <li>
                 Lesson 9:
-                <a href="#"></a>
+                <a href="lesson-9.html"></a>
             </li>
             <li>
                 Lesson 10:
-                <a href="#"></a>
+                <a href="lesson-10.html"></a>
             </li>
             <li>
                 Lesson 11:
-                <a href="#"></a>
+                <a href="lesson-11.html"></a>
             </li>
         </ul>
     </main>
