--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </main>
     <footer>
         <p>&copy; 2022| Kimberly Uresti | Arizona |</p>
-        <a href="https://www.byui.edu/online">BYUI Online Learning</a> 
+        <a class="BYUIlink" href="https://www.byui.edu/online">BYUI Online Learning</a> 
         | Today's date: <span id="currentdate"></span>
         <br>
         Last Modified: <span id="lastmodified"></span>
