--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </ul>
     </main>
     <footer>
-        <p>&copy; 2022| Kimberly Uresti | Arizona |</p>
+        <p>&copy<span id="copyright-year"></span> | Kimberly Uresti | Arizona |</p>
         <a class="BYUIlink" href="https://www.byui.edu/online">BYUI Online Learning</a> 
         | Today's date: <span id="currentdate"></span>
         <br>
@@ -85,6 +85,7 @@
     </footer>
     </div>
     <script src="scripts/date.js"></script>
+    <script src="scripts/copyrightYear.js"></script>
     
 </body>
 </html>
