--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/large.css">
-    
+    <!--Google Font API-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans&family=Lora&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="content">
@@ -31,7 +34,7 @@
     </header>
     <main>
         <h2>WDD 230: Lesson Portal</h2>
-        <ul>
+        <ul class="lessonLinks">
             <li>
                 Lesson 2:
                 <a href="lesson-2.html">Assignment Link</a>
