--- a/lessonPortal/index.html
+++ b/lessonPortal/index.html
@@ -24,7 +24,7 @@
     <header>
         <div class="header-box">
         <!--ID photo Kimberly Uresti-->
-        <img class="header-box-image" src="images/kimpicwdd230.jpg" alt="Photo of Kimberly Uresti">
+        <img class="header-box-image" src="lessonPortal-images\kimpicwdd230.jpg" alt="Photo of Kimberly Uresti">
         <!--Main Heading-->        
         </div>
         <div class="header-box-name">
