--- a/lessonPortal/index.html
+++ b/lessonPortal/index.html
@@ -37,7 +37,7 @@
         <ul class="lessonLinks">
             <li>
                 Lesson 2:
-                <a href="lesson-2.html">Assignment Link</a>
+                <a href="/Lesson2/designPrinciples.html">Assignment Link</a>
             </li>
             <li>
                 Lesson 3:
