--- a/lessonPortal/index.html
+++ b/lessonPortal/index.html
@@ -24,7 +24,7 @@
     <header>
         <div class="header-box">
         <!--ID photo Kimberly Uresti-->
-        <img class="header-box-image" src="lessonPortal-images\kimpicwdd230.jpg" alt="Photo of Kimberly Uresti">
+        <img class="header-box-image" src="images/kimpicwdd230.jpg" alt="Photo of Kimberly Uresti">
         <!--Main Heading-->        
         </div>
         <div class="header-box-name">
@@ -37,7 +37,7 @@
         <ul class="lessonLinks">
             <li>
                 Lesson 2:
-                <a href="/Lesson2/designPrinciples.html">Assignment Link</a>
+                <a href="Lesson2/designPrinciples.html">Assignment Link</a>
             </li>
             <li>
                 Lesson 3:
