--- a/Lesson2/designPrinciples.html
+++ b/Lesson2/designPrinciples.html
@@ -24,7 +24,7 @@
         <div class="flex-container"></div>
         <nav>
             <!--Home button link-->
-            <button onclick="window.location.href='https://kuresti.github.io/wdd230';">Home</button>
+            <button onclick="window.location.href='https://kuresti.github.io/wdd230/lessonPortal';">Home</button>
         </nav>
     </div>
     </header>
