--- a/Lesson2/designPrinciples.html
+++ b/Lesson2/designPrinciples.html
@@ -26,7 +26,6 @@
             <!--Home button link-->
             <button onclick="window.location.href='https://kuresti.github.io/wdd230/';">Home</button>
         </nav>
-    </div>
     </header>
     <main>
         <section>
@@ -69,7 +68,7 @@
         </section>
     </main>
     <footer>
-        <p id="copyright">&copy<span id="copyright-year"></span> | Kimberly Uresti | Arizona |<br>
+        <p id="copyright">&copy;<span id="copyright-year"></span> | Kimberly Uresti | Arizona |<br>
         <a class="BYUIlink" href="https://www.byui.edu/online">BYUI Online Learning</a> 
         | Today's date: <span id="currentdate"></span> |
         <br>
