--- a/Lesson2/designPrinciples.html
+++ b/Lesson2/designPrinciples.html
@@ -31,7 +31,7 @@
         <section>
             <h3>PARC: Alignment</h3>
             <p id="p1">Walmart<br>
-                <a href="https://walmart.com/">www.walmart.com</a></p>
+                <a id="walmart" href="https://walmart.com/">www.walmart.com</a></p>
 
                 <picture>
                     <img src="images/walmart.Samsung.Galaxy.S8.png" alt="Walmart site mobile viewport">
@@ -47,7 +47,7 @@
         <section>
             <h3>White Space and Clean Design</h3>
             <p id="p2">Squarespace<br>
-                <a href="https://squarespace.com">www.squarespace.com</a></p>
+                <a id="squarespace" href="https://squarespace.com">www.squarespace.com</a></p>
                 <img src="images/squarespace.Samsung.Galaxy.S8.png" alt="Squarespace mobile viewport">
             <p>The use of white space on the Squarespace website gives the page a clean, uncluttered
                 look. The space between elements, along with text alignement lead the eye to the call 
@@ -58,7 +58,7 @@
         <section>
             <h3>PARC: Contrast</h3>
             <p id="p3">United Health Care<br>
-                <a href="https://uhc.com">www.uhc.com</a></p>
+                <a id="unitedHealthcare" href="https://uhc.com">www.uhc.com</a></p>
                 <img src="images/united.Health.Care.Galaxy.S8.png" alt="United Health Care mobile viewport">
             <p>On this site the use of dark blue font over a white background provides a simple, yet effective 
                 contrast. Contrast can also be found in the colors of the women's shirts against the dark blue
