--- a/Lesson-3/index.html
+++ b/Lesson-3/index.html
@@ -49,10 +49,13 @@
             <p>Desert Mountain Chamber</p>
             <hr>
             <h2>Site Purpose</h2>
-            <p></p>
+            <p>The purpose of this site is to advance the interests of local businesses and members. 
+               To draw new businesses, members, and people. To promote local events and attractions 
+               that will appeal to both tourists and locals.
+            </p>
             <hr>
             <h2>Domain Name</h2>
-            <p>desertmountainchamber</p>
+            <p>desertmountainchamber.com</p>
             <hr>
             <h2>Site Logo</h2>
             <img src="/Lesson3/images/dm-logo2.png" alt="Desert Mountain Chamber logo">
