--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </li>
             <li>
                 Lesson 3:
-                <a href="lesson-3.html">Assignment Link</a>
+                <a href="Lesson-3/index.html">Assignment Link</a>
             </li>
             <li>
                 Lesson 4:
