--- a/Lesson-3/target-audience.html
+++ b/Lesson-3/target-audience.html
@@ -62,7 +62,7 @@
             <h3>Michael and Lena</h3>
             <p>
                They are 32 years old and married with two children ages three and one. They are
-               looking to relocate their family. They value a tightly knit community that with
+               looking to relocate their family. They value a tightly knit community with
                strong family values. They also enjoy being part of a community by attending
                community events. To get to know more about the Desert Mountain area they would
                visit the desertmountainchamber.com using their smart phones.
@@ -71,12 +71,12 @@
             <hr>
             <p>
                 I am a new business owner who is seeking membership in the Desert Mountain Chamber 
-                of Commerce, where do I sign up?
+                of Commerce, where do I sign up?<br>
                 I heard that the Desert Mountain is a great place to vacation, how can I fine out 
-                more?
-                Is there a community event going on this weekend?
+                more?<br>
+                Is there a community event going on this weekend?<br>
                 Are there any business networking groups in Desert Mountain and when, where and what 
-                time do they meet?
+                time do they meet?<br>
                 We are looking for a family friendly place to relocate to, what is the Desert Mountain
                 area like?
             </p>
