--- a/Lesson-3/index.html
+++ b/Lesson-3/index.html
@@ -44,7 +44,7 @@
                 </nav>
             </div>
             <!--Link back to main page-->
-            <button onclick="windo.location.href='https://kuresti.github.io/wdd230/';">Assignment Portal</button>
+            <button onclick="window.location.href='https://kuresti.github.io/wdd230/';">Assignment Portal</button>
             <h2>Site Name</h2>
             <p>Desert Mountain Chamber</p>
             <hr>
